very basic clone, minimal css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,124 @@
   </head>
   <body>
     <div class = "topnav">
-    <div>
+      <a href="javascript:void(0)" class ="icon">
+        <i class="fa fa-bars"></i>
+      </a>
+      <a href="https://www.youtube.com/" >
+        <img src = 'media/logo.jpg' alt = 'Youtube logo' class = 'logo'></img>
+     </a>
+     <input id='searchbard' type='text' name='search' placeholder='Search'>
+     <button>Search</button>
+     <a>Create</a>
+     <a>Links</a>
+     <a>Notifications</a>
+     <a>User</a>
+    </div>
+    <div class='container'>
+      <div class='player'>
+        <iframe class = 'video' width="1120" height="630" src="https://www.youtube.com/embed/lJIrF4YjHfQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class = 'video-info'>
+          <h1>Video Title</h1>
+          <h2>Number of Views</h2>
+          <p>
+            Description of video!
+          </p>
+      </div>
+      </div>
+      
+      <div class= 'sidebar'>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+        </div>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+        </div>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+        </div>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+        </div>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+        </div>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+        </div>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+
+        </div>
+        <div class = 'thumbnail'>
+          <img src = 'media/thumbnail.jpg' alt = 'Test image' height = '120' width ='200'>
+          <div class = 'thumbnail-words'>
+            <div class= 'thumbnail-title'>
+              Thumbnail Title
+            </div>
+            <div class = 'thumbnail-desc'>
+              Thumbnail Description
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
